static/css/style.css
/* ... */
/* lg + */
@media (min-width: 992px) {
  .carousel-item {
    height: 380px;
  }
  .navbar {
    max-width: 960px;
  }
  .navbar .container {
    padding-left: 0;
    padding-right: 0;
  }

  /* override Bootstrap _navbar.scss:178 for second menu */
  .navbar-expand-lg #languageOptions.navbar-collapse {
    display: none !important;
  }

  .navbar-origin .brand-container {
    flex-grow: 0;
    position: absolute;
  }
  .navbar-origin .navbar-nav {
    flex-grow: 1;
    justify-content: flex-end;
  }
  .navbar-origin .navbar-collapse {
    background-color: transparent;
    margin: 0px;
    padding: 0px;
    z-index: auto;
  }
  .navbar-origin .nav-item {
    font-size: 0.875rem;
  }
  .navbar-light .nav-item .nav-link {
    color: #6f8294;
  }
  .navbar-light .navbar-toggler i {
    color: #6f8294;
  }
  .navbar-origin .navbar-collapse .nav-item,
  .navbar-origin .navbar-collapse .nav-item.dropdown {
    padding: 20px;
  }

  .headshot-wrapper {
    height: 160px;
    width: 160px;
  }
  .platform-section .btn {
    padding: 0.5rem 1.7rem;
  }
  .use-cases-section .btn {
    padding: 0.5rem 1.7rem;
  }
  .building-partners-section h2,
  .core-team-section h2 {
    margin-top: 200px;
  }
  .advisor-team-section .foreground-content {
    margin-bottom: 50px;
  }
  .building-interest-section .build-on-origin-form .form-group.flex {
    align-items: center;
    display: flex;
  }
  .building-interest-section .build-on-origin-form .form-group.flex label,
  .building-interest-section .build-on-origin-form .form-group.flex .flex-offset {
    flex: 1;
    margin-bottom: 0px;
  }
  .building-interest-section .build-on-origin-form .form-group.flex input,
  .building-interest-section .build-on-origin-form .form-group.flex textarea {
    flex: 3;
    margin-left: 10px;
  }
  #rtl .building-interest-section .build-on-origin-form .form-group.flex input,
  #rtl .building-interest-section .build-on-origin-form .form-group.flex textarea {
    margin-left: 0px;
    margin-right: 10px;
  }
  .building-interest-section .partners.img-graphic {
    margin-top: 0px;
  }
  .creator-hero-graphic {
    background-position: bottom right;
    background-size: contain;
  }

  .creator-wrapper {
    /* 8 col equals 1140 which is the standard container width. */
    max-width: 1710px; 
    margin: auto;
  }
  .reasons .inner-box {
    padding: 50px;
  }
}

/* xl + */
@media (min-width: 1200px) {
  .navbar {
    max-width: 1140px;
  }
  .technology-section .container-fluid > .row {
    padding-bottom: 200px;
  }
  .reasons .inner-box {
    padding: 100px;
  }
}

/* xxl + */
@media (min-width: 1600px) {
  .creator-hero-graphic {
    background-image: url('/static/img/creator-hero-graphic.png');
  }
}

/* firefox hacks */
@-moz-document url-prefix() {
  .core-team-section .top-panes .col-pane,
  .platform-section .top-panes .col-pane {
    display: block;
  }

  .core-team-section .left-upper-pane,
  .core-team-section .right-upper-pane,
  .platform-section .left-upper-pane,
  .platform-section .right-upper-pane {
    height: 100%;
  }
}

